--- a/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
@@ -17,7 +17,7 @@
                                 <h:graphicImage value="Imagenes/IconNFYO.gif" style="position: absolute; top: 18px; left: 5px; width: 35px  ; height: 50px "/>
                                 <p:commandButton style="position: absolute; left: 45px; width: 180px;top:21px; height: 25px ;" value="Por Empleado..." actionListener="#{controlNovedad.recibir('por empleado...')}" action="novedadempleado"/>
                                
-                                <p:commandButton style="position: absolute;top: 50px; left: 45px; width: 180px; height: 25px ;" value="Por Concepto..." actionListener="#{controlNovedad.recibir('por Concepto...')}" action="novedadconcepto" />
+                                <p:commandButton style="position: absolute;top: 50px; left: 45px; width: 180px; height: 25px ;" value="Por Concepto..." action="novedadconcepto" />
                                 <p:commandButton style="position: absolute;top: 79px; left: 45px; width: 180px; height: 25px ;" value="Por Tercero..." actionListener="#{controlNovedad.recibir('por Tercero...')}" action="Impresion"/>
                             </fieldset>
                             <fieldset style="position: absolute; left: 5px;top: 130px ;height: 101px; width: 225px; border-radius: 10px">
